# cns-task3-agent

./: .dockerignore  .pdm-python  Dockerfile  README.md  autoresearch.ideas.md  autoresearch.jsonl  pyproject.toml  run.sh
.github/workflows/: build-and-push.yml
agent/: config.md  log.jsonl  prompt.md  run_summary.json
configs/: data_sources.example.json  entry_manifest.json
configs/test_data/: normalized.pt
runs/example_run/result/: README.md
runs/run_20260606_044021/result/: README.md
src/task3_agent/: __init__.py  audit.py  benchmark.py  cli.py  config.py  contracts.py  data.py  models.py  pipeline.py  runtime.py  train.py
tests/: test_config.py  test_data_pipeline.py  test_import_smoke.py  test_pipeline_smoke.py  test_runtime_contract.py  test_training.py
