[project]
name = "cns-task3-agent"
version = "0.1.0"
description = "AI agent for CNS Task 3: Protein Conformational Ensemble Generation"
requires-python = ">=3.10"
dependencies = ["numpy>=2.2.6", "torch==2.6.0"]

[project.scripts]
task3-agent = "task3_agent.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
